fix spacing

--- a/css/layout.css
+++ b/css/layout.css
@@ -36,3 +36,8 @@ h3 {
 p {
   font-size: 20px;
 }
+
+.contentDiv{
+  width: calc(100% - 300px);
+  margin: auto;
+}
